fix : root default overflow

--- a/src/app/root/root-default/root-default.component.scss
+++ b/src/app/root/root-default/root-default.component.scss
@@ -3,7 +3,7 @@
 
 .root-default-container {
 	height: 100%;
-	overflow-y: hidden;
+//	overflow-y: hidden;
 	background-color: map-get($mat-bs-accent, 50) !important;
 	box-sizing: border-box;
 }
